<resources>
    <string name="app_name">EspressoSample</string>
    <string name="action_settings">Settings</string>
    <string name="email_address">Email Address</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="submit">Submit</string>
    <string name="err_first_name_blank">First name cannot be blank.</string>
    <string name="err_last_name_blank">Last name cannot be blank.</string>
    <string name="err_age_blank">Age cannot be blank.</string>
    <string name="err_email_address_blank">Email address cannot be blank.</string>
</resources>
